--- a/package.json
+++ b/package.json
@@ -10,11 +10,23 @@
     "@types/node": "^16.18.10",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "bootstrap": "^5.2.3",
+    "crypto-js": "^4.1.1",
+    "fetch": "^1.1.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-range": "^1.8.14",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-scrollbars-custom": "^4.1.1",
+    "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
+  },
+  "browser": {
+    "crypto": false
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/crypto-js": "^4.1.1"
   }
 }
